fixed: z-index of sidebar

--- a/css/frontpage.scss
+++ b/css/frontpage.scss
@@ -25,8 +25,3 @@
 .is-layout-flex.wp-container-3.wp-block-columns {
   display: none;
 }
-
-/* Why did I do this?
-.sidebar{
-	z-index: -1;
-} */
